--- a/frontend/src/layouts/EventNav.module.css
+++ b/frontend/src/layouts/EventNav.module.css
@@ -13,15 +13,16 @@
 }
 
 .list a {
+    background-color: var(--color-gray-500);
+    color: var(--color-gray-900);
+    padding: 0.5rem 1.5rem;
+    border-radius: 4px;
     text-decoration: none;
-    color: var(--color-primary-400);
 }
 
-.list a:hover {
-    color: var(--color-primary-800);
-}
-
+.list a:hover,
 .list a.active {
-    color: var(--color-primary-800);
-    border-bottom: 1px solid var(--color-primary-800);
+    background-color: var(--color-primary-800);
+    /* border-bottom: 1px solid var(--color-primary-800); */
+
 }
